use-cases/demo/base/podinfo.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: podinfo
