use-cases/demo/base/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: podinfo
  namespace: podinfo
  annotations:
    cert-manager.io/cluster-issuer: "${cluster_issuer}"
spec:
  gatewayClassName: eg
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: https
      port: 443
      protocol: HTTPS
      hostname: podinfo.${domain}
      tls:
        mode: Terminate
        certificateRefs:
          - name: podinfo-tls-ingress
            namespace: podinfo
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: podinfo
spec:
  parentRefs:
    - name: podinfo
  hostnames:
    - podinfo.${domain}
  rules:
    - backendRefs:
        - name: podinfo
          port: 9898
